--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Slither.io Clone - Loonride Example</title>
+    <title>Wormz Coding Dojo Demo</title>
     <script src="lib/phaser.min.js"></script>
     <script src="src/game.js"></script>
     <script src="src/snake.js"></script>
@@ -17,7 +17,7 @@
 <body>
     <script>
     (function() {
-        var game = new Phaser.Game(800, 500, Phaser.AUTO, null);
+        var game = new Phaser.Game(window.innerWidth * window.devicePixelRatio, window.innerHeight * window.devicePixelRatio, Phaser.AUTO, null);
 
         game.state.add('Game', Game);
         game.state.start('Game');
